# MoizMXFP4-public

./: .gitignore  INSTALL.md  Makefile  README.md  environment.yml  install_blackwell.sh  pyproject.toml
benchmarks/: __init__.py  benchmark_blackwell.py  benchmark_extreme_k.py  benchmark_linear.py  benchmark_llm_training.py
dev/: investigate_discrepancy.py  profile_for_ncu.py  profile_kernel.py  profile_pytorch.py  tune_block_sizes.py  tune_kernel.py
src/mxfp4/: __init__.py  backends.py  fused_kernels.py  kernel_dispatcher.py  kernels.py  modules.py  quantizer.py
src/mxfp4/kernels/: __init__.py
src/mxfp4/utils/: __init__.py  model_utils.py
tests/: test_dispatcher.py  test_fused.py  test_modules.py  test_quantizer.py  test_utils.py
